--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "ipykernel>=7.1.0",
-    "yt-dlp[default]>=2025.12.8",
+    "yt-dlp[default]>=2026.1.29",
+    "iprogress>=0.4",
+    "ipywidgets>=8.1.8",
 ]
+
+
